# electronpass-android

./: .gitignore  .gitmodules  README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/lib/: fetch_sodium.sh
app/src/androidTest/java/io/github/electronpass/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  passwords_wrapper.cpp
app/src/main/java/io/github/electronpass/: MainActivity.kt
app/src/main/java/io/github/electronpass/libelectronpass/: Passwords.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/io/github/electronpass/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
